11/01/08 Julien Dutheil
* Inclusion in new namespace bpp.
* Bug fixed in DRNonHomogeneousTreeLikelihood.
* Fixed recently introduced bug in DRHomogeneousTreeLikelihood.

29/12/07 Julien Dutheil
* New class DRNonHomogeneousTreeLikelihood.
* Methods getLogLikelihood now sort terms before adding them.

24/12/07 Julien Dutheil
* Added support for invariants in rate distributions.

18/12/07 Céline Scornavacca & Julien Dutheil
* TreeTemplateTools::parenthesisToTree now sends exceptions in case of bad
format.
* Removed a 'unused variable' warning in NonHomogeneousSequenceSimulator.

21/11/07 Julien Dutheil
* Tree(Template)Tools do not throw exception if the root node do not have a
  branch length.

15/11/07 Julien Dutheil
* Bug fixed in clonage of empty DR*LikelihoodData.

14/11/07 Julien Dutheil
* New methods getAncestors and getLastCommonAncestor in TreeTools.

07/11/07 Julien Dutheil
* Nucleotide substitution models re-parametrized to remove constraint on
  equilibrium frequencies. These frequencies can now be fully optimized.
	Root frequencies in non-stationary models also updated.
* More bugs fixed due to the new heterogeneous models.
* Sequence simulations improved (faster), due to the use of NodeTemplates
  instead of maps for storing node-specific data.
* HomogeneousSequenceSimulator moved to HomogeneousSequenceSimulator.h.

10/10/07 Bastien Boussau & Julien Dutheil
* New class NonHomogeneousTreeLikelihood, which deal with non-homogeneous
  models of sequence evolution (fixed topology).
* SubstitutionModels parameters are now cloned propoerly (no more Constraint issue).
* ClockTreeLikelihood has been chaged to HomogeneousClockLikelihood, and a
  NonHomogeneousClockTreeLikelihood was created. The ClockTreeLikelihood is
	now a common (empty) interface for both, which a specialisation of
	TreeLikelihood.
* NewtonBrentMetaOptimizer becomes MetaOptimizer, is more general, and was
  moved to NumCalc.

05/10/07 Julien Dutheil