@@ -43,6 +43,7 @@ knowledge of the CeCILL license and that you accept its terms.
 
 #include "AbstractTreeLikelihoodData.h"
 #include "SubstitutionModel.h"
+#include "SitePatterns.h"
 
 // From NumCalc:
 #include <NumCalc/VectorTools.h>
@@ -269,9 +270,9 @@ class DRASRTreeLikelihoodData :
 		 * @param node      The node defining the subtree to analyse.
 		 * @param sequences The data to be used for initialization.
      * @param model     The model to use.
-		 * @return The shrunk sub-dataset for the subtree defined by <i>node</i>.
+		 * @return The shrunk sub-dataset + indices for the subtree defined by <i>node</i>.
 		 */
-		virtual SiteContainer * initLikelihoodsWithPatterns(const Node * node, const SiteContainer & sequences, const SubstitutionModel & model) throw (Exception);
+		virtual SitePatterns * initLikelihoodsWithPatterns(const Node * node, const SiteContainer & sequences, const SubstitutionModel & model) throw (Exception);
 		
 };
 
